<resources>
    <string name="app_name">Ember</string>
    <string name="greetings">Witaj w Ember.\nTutaj Twoje zadania nigdy nie wygasną.</string>


    <string name="login_title">Zaloguj się</string>
    <string name="login_hint_email">Email lub nick</string>
    <string name="login_hint_password">Hasło</string>
    <string name="login_button">Zaloguj się</string>
    <string name="login_switch_to_register">Nie mam konta? Zarejestruj się</string>

    <string name="register_title">Zarejestruj się</string>
    <string name="register_hint_nick">Wpisz nick</string>
    <string name="register_hint_email">Wpisz email</string>
    <string name="register_hint_password">Wpisz hasło</string>
    <string name="register_hint_password_confirm">Potwierdź hasło</string>
    <string name="register_button">Zarejestruj się</string>
    <string name="register_switch_to_login">Mam już konto? Zaloguj się</string>

    <string name="error_fill_email">Podaj email lub nick</string>
    <string name="error_fill_password">Podaj hasło</string>
    <string name="error_fill_nick">Podaj nick</string>
    <string name="error_fill_email_register">Podaj email</string>
    <string name="error_fill_password_register">Podaj hasło</string>
    <string name="error_fill_password_confirm">Potwierdź hasło</string>
    <string name="error_passwords_mismatch">Hasła nie są zgodne</string>

    <string name="error_login_nick_not_found">Nie znaleziono konta dla tego nicku</string>
    <string name="error_login_nick_no_exist">Nick nie istnieje</string>
    <string name="error_login_failed">Błąd logowania: %s</string>
    <string name="error_generic">Błąd: %s</string>

    <string name="error_nick_taken">Nick jest już zajęty</string>
    <string name="error_nick_check_failed">Błąd sprawdzania nicku: %s</string>
    <string name="error_register_failed">Błąd rejestracji: %s</string>
    <string name="error_save_nick_failed">Błąd zapisu nicku: %s</string>
    <string name="error_save_user_failed">Błąd zapisu użytkownika: %s</string>

    <string name="nav_profile">Profil</string>
    <string name="nav_plan">Plan</string>
    <string name="nav_new">Nowe</string>
    <string name="nav_settings">Ustawienia</string>
    <string name="nav_history">Historia</string>

    <string name="new_menu_title">Nowe</string>
    <string name="new_option_plan">Zaplanuj</string>

    <string name="plan_week">Tydzień</string>
    <string name="plan_month">Miesiąc</string>
    <string name="plan_no_events">Brak wydarzeń</string>
    <string name="dialog_add_plan">+ Dodaj plan</string>

    <string name="profile_section_account">Konto</string>
    <string name="profile_nick">Nick</string>
    <string name="profile_joined">Dołączył/a</string>
    <string name="profile_plans_count">Liczba planów</string>
    <string name="profile_logout">Wyloguj się</string>

    <string name="greeting_morning">Dzień dobry,</string>
    <string name="greeting_afternoon">Dzień dobry,</string>
    <string name="greeting_evening">Dobry wieczór,</string>
    <string name="home_today">Dziś</string>
    <string name="home_count">%d planów</string>
    <string name="home_no_plans">Brak planów na dziś</string>
    <string name="home_add_first">+ Dodaj pierwszy plan</string>
    <string name="home_untitled">Plan</string>

    <string name="no_wifi">Brak połączenia</string>
    <string name="waiting">Oczekiwanie na połączenie z internetem</string>

    <string name="add_plan_title">Nowy plan</string>
    <string name="add_plan_hint_title">Tytuł</string>
    <string name="add_plan_hint_content">Opis / treść (opcjonalny)</string>
    <string name="add_plan_section_due">Termin</string>
    <string name="add_plan_no_date">Nie wybrano daty</string>
    <string name="add_plan_pick_date">Wybierz</string>
    <string name="add_plan_section_notif">Powiadomienia</string>
    <string name="add_plan_notif_hint">Kliknij godzinę • przytrzymaj aby ustawić minuty</string>
    <string name="add_plan_section_priority">Priorytet</string>
    <string name="add_plan_save">Zapisz plan</string>
    <string name="add_plan_error_no_date">Wybierz datę terminu</string>
    <string name="add_plan_error_save">Błąd podczas zapisywania</string>
    <string name="priority_low">Niski</string>
    <string name="priority_medium">Średni</string>
    <string name="priority_high">Wysoki</string>
    <string name="add_plan_error_no_title">Tytuł jest wymagany</string>

    <string name="history_title">Historia</string>
    <string name="history_count">%d planów</string>
    <string name="history_no_plans">Brak dodanych planów</string>
    <string name="history_no_notif">brak powiadomienia</string>
    <string name="history_label_added">Dodano:</string>
    <string name="history_label_due">Termin:</string>
    <string name="history_label_notif">Powiadomienie:</string>
    <string name="history_status_done">Wykonano</string>
    <string name="history_status_pending">W toku</string>
</resources>